# ColorSavesLife

./: .gitignore  .gitmodules  LICENSE  README.md  docker-compose.yml  output.webm
docker/: Dockerfile
presentation/: README.md
ros2_pkg/image_subscriber/: package.xml  setup.py
ros2_pkg/image_subscriber/image_subscriber/: image_subscriber.py
ros2_pkg/test_publisher/: package.xml  setup.cfg  setup.py
ros2_pkg/test_publisher/test_publisher/: test_publisher.py
srcs/: disability_assistant.py  image_subscriber.py  main.py
srcs/plugins/: plugin.py  plugin_master.py
srcs/plugins/color_disability/: color_disability.py  traffic_object.py  ~
srcs/python-client/: .gitmodules  disability_assistant.py  image_subscriber.py  main.py
srcs/python-client/plugins/color_disability/: color_disability.py
srcs/simulation_ws/install/: local_setup.sh  setup.sh
srcs/simulation_ws/install/sim/share/sim/: local_setup.bash  local_setup.dsv  package.sh  (+3 more)
srcs/simulation_ws/log/: latest_build
srcs/simulation_ws/src/sim/: CMakeLists.txt  package.xml
srcs/simulation_ws/src/sim/config/: camera_movement.yaml
srcs/simulation_ws/src/sim/description/: car.xacro  test.xacro
srcs/simulation_ws/src/sim/launch/: sim.launch.py  test.launch.py
srcs/simulation_ws/src/sim/meshes/: bcx.stl
srcs/simulation_ws/src/sim/src/: camera_movement.cpp
srcs/simulation_ws/src/sim/worlds/: empty.world  road.world
srcs/simulation_ws/src/teleop/teleop/: controller.py
srcs/simulation_ws/src/tracking/: package.xml  setup.cfg  setup.py
srcs/simulation_ws/src/tracking/tracking/: eye_tracking.py
(+25 files in other folders)
